mid commit